--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,9 @@ find_package(ament_cmake REQUIRED)
 install(DIRECTORY config launch
   DESTINATION share/${PROJECT_NAME}
 )
+install(PROGRAMS
+  scripts/tcp_pid_servo.py
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ament_package()
