--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,13 @@
   <exec_depend>topic_based_ros2_control</exec_depend>
   <exec_depend>fanuc_m900ib_support</exec_depend>
   <exec_depend>controller_manager</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
+  <exec_depend>moveit_servo</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
+
 
   <export>
     <build_type>ament_cmake</build_type>
